# go-micro

./: .deepsource.toml  .editorconfig  .gitignore  .golangci.yaml  .golangci.yml  .goreleaser.yaml  .richstyle.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEX.md  CONTRIBUTING.md  CURRENT_STATUS_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS_2026.md  README.md  README.zh-cn.md  ROADMAP.md  ROADMAP_2026.md  SECURITY.md  SUPPORT.md  common_test.go  default.go  defaults.go  event.go  function.go  function_test.go  generate.go  go-micro.go  go.mod  go.sum  index.html  micro.go  micro_test.go  nitro.go  (+11 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  generate.sh
.qoder/: settings.json
.trunk/: trunk.yaml
acme/: acme.go  options.go
agent/: .travis.yml  README.md  a2a_stream_test.go  agent.go  agent_test.go  builtin.go  builtin_test.go  checkpoint.go  checkpoint_test.go  conformance_test.go  guardrails_test.go  integration_test.go  loop_test.go  memory.go  memory_test.go  options.go  otel.go  otel_test.go  resilience_test.go  stream.go  stream_test.go  text_tool_calls.go  text_tool_calls_test.go  wrap_test.go
ai/: README.md  capabilities.go  capabilities_test.go  history.go  history_test.go  image.go  model.go  options.go  retry.go  retry_test.go  stream_conformance_test.go  tools.go  tools_test.go  video.go
api/: .travis.yml  README.md  api.go  api_test.go  default.go  grpc_test.go  options.go  util.go
app/: app.go  options.go  rpc.go
auth/: ANALYSIS.md  auth.go  auth_test.go  default.go  default_test.go  memory_store.go  noop.go  options.go  rules.go  rules_test.go
broker/: broker.go  broker_gen.go  buffer.go  codec.go  common_test.go  default.go  doc.go  extractor.go  extractor_test.go  http.go  http_broker.go  http_broker_test.go  http_test.go  memory.go  memory_test.go  nats_broker.go  options.go
cache/: cache.go  cache_test.go  default.go  memory.go  memory_test.go  options.go  options_test.go
client/: backoff.go  backoff_test.go  buffer.go  cache.go  cache_test.go  client.go  client_selector.go  client_wrapper.go  codec.go  common_test.go  context.go  doc.go  grpc_client.go  headers.go  is_retriable.go  local.go  local_test.go  lookup.go  node_selector.go  node_selector_test.go  options.go  options_test.go  pool.go  request.go  retry.go  rpc_client.go  rpc_client_test.go  rpc_codec.go  rpc_message.go  rpc_pool.go  rpc_pool_test.go  rpc_publication.go  rpc_request.go  rpc_request_test.go  rpc_response.go  rpc_stream.go  rpcplus_client.go  test_request.go  trace.go  util.go  (+1 more)
cmd/: README.md  cmd.go  default.go  doc.go  go.mod  nats_registry.go  options.go
codec/: codec.go  codec_test.go  doc.go
config/: README.md  config.go  default.go  default_test.go  issue18_test.go  options.go  value.go
context/: context.go
contrib/go-micro-llamaindex/: README.md  pyproject.toml
contrib/go-micro-llamaindex/examples/: basic_agent.py  rag_with_services.py
contrib/go-micro-llamaindex/go_micro_llamaindex/: __init__.py  exceptions.py  toolkit.py
contrib/go-micro-llamaindex/tests/: test_toolkit.py
contrib/langchain-go-micro/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
contrib/langchain-go-micro/examples/: basic_agent.py  multi_agent.py
contrib/langchain-go-micro/langchain_go_micro/: __init__.py  exceptions.py  toolkit.py
contrib/langchain-go-micro/tests/: test_toolkit.py
data/: data.go  options.go
db/: db.go
debug/: README.md  debug.go
docs/: REFLECTION-EVALUATION-SUMMARY.md  deployment.md  performance.md  readme.md  reflection-removal-analysis.md
errors/: doc.go  errors.go  errors.pb.go  errors.pb.micro.go  errors.proto  errors_test.go
events/: events.go  memory.go  options.go  store.go  store_test.go  stream_test.go
examples/: INDEX.md  README.md  go.mod  go.sum  grpc_client.go  pub_sub.go  service_client.go
flow/: TODO.md  analyze.go  analyze_test.go  client_call.go  client_call_op.go  client_publish_op.go  context.go  convert.go  (+41 more)
(+3387 files in other folders)
